fixed overflow of the whole document

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -62,7 +62,7 @@ $baseurl: "{{ site.baseurl }}"
 @import footer
 
 html
-  // overflow-x: hidden
+  overflow-x: hidden
 body
   background-color: $main-blue
   margin: 0px
